# Remote-File-Repository-System

./: README.md
RFR_Client/: CMakeLists.txt
RFR_Client/include/: Cli.h  CommandHandler.h  JSONUtilities.h  authentication.h  configInterface.h  networking.h
RFR_Client/src/: Cli.cpp  CommandHandler.cpp  JSONUtilities.cpp  authentication.cpp  config.json  configInterface.cpp  help.txt  main.cpp  networking.cpp
RFR_Server/: CMakeLists.txt  authentication.cpp  authentication.h  config.json  configInterface.cpp  configInterface.h  dbInterface.cpp  dbInterface.h  fileInterface.cpp  fileInterface.h  main.cpp  networking.cpp  networking.h
